--- a/payment.html
+++ b/payment.html
@@ -39,7 +39,7 @@
  <!-- 🔴 ADD THIS EXACTLY HERE -->
   <div class="row" style="text-align:center">
     <img
-      id="product"
+      id="imgSrc"
       alt="Product image"
       style="
         max-width:100%;
