--- a/payment.html
+++ b/payment.html
@@ -39,10 +39,7 @@
  
     <div class="row">
       <label>Product</label>
-      <input id="product" readonly />
-      <!-- 🔴 ADD THIS EXACTLY HERE -->
-  <div class="row" style="text-align:center">
-    <img
+      <input id="product"  readonly <img
       id="imgSrc"
       alt="Product image"
       style="
@@ -53,9 +50,8 @@
         margin-bottom:12px;
         display:none;
       "
-    >
-  </div>
-  <!-- 🔴 END -->
+    > />
+      
     </div>
 
     <div class="row">
