--- a/payment.html
+++ b/payment.html
@@ -39,7 +39,8 @@
  
     <div class="row">
       <label>Product</label>
-      <input id="product"  readonly <img
+      <input id="product"  readonly /><br>
+      <input <img
       id="imgSrc"
       alt="Product image"
       style="
@@ -50,8 +51,7 @@
         margin-bottom:12px;
         display:none;
       "
-    > />
-      
+    >
     </div>
 
     <div class="row">
