--- a/payment.html
+++ b/payment.html
@@ -39,10 +39,12 @@
  
     <div class="row">
       <label>Product</label>
-      <input id="product"  readonly /><br>
-      <input <img
+      <input id="product"  readonly />
+    </div>
+    <div class="row">
+      <label>Product Image</label>
+    <img
       id="imgSrc"
-      alt="Product image"
       style="
         max-width:100%;
         max-height:260px;
