--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hamsa Sarees — Payment</title>
 
-  <!-- ✅ UPDATED CSP FOR RAZORPAY + GOOGLE FORMS + FIREBASE (INCLUDES SOURCE MAPS) -->
+  <!-- CSP: Razorpay + Firebase + Google Forms -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self' https: data: blob:;
     script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
@@ -19,221 +19,246 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
-    body{margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,#001f3f,#00306b);color:#eaf6ff;display:flex;align-items:center;justify-content:center;min-height:100vh}
-    .card{background:linear-gradient(180deg,#071522,#06121a);border-radius:14px;padding:24px;max-width:420px;width:100%;box-shadow:0 20px 60px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,0.05)}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,Arial,sans-serif;
+      background:linear-gradient(180deg,#001f3f,#00306b);
+      color:#eaf6ff;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      min-height:100vh
+    }
+    .card{
+      background:linear-gradient(180deg,#071522,#06121a);
+      border-radius:14px;
+      padding:24px;
+      max-width:420px;
+      width:100%;
+      box-shadow:0 20px 60px rgba(0,0,0,.45);
+      border:1px solid rgba(255,255,255,0.05)
+    }
     h1{margin:0 0 6px;font-size:22px;font-weight:800}
     .small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
     .row{margin-bottom:12px}
     label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
-    input{width:100%;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.08);background:#0b1220;color:#fff;font-size:14px}
-    .price{font-size:20px;font-weight:800;color:#4dd0e1;margin:8px 0 14px}
-    button{width:100%;padding:14px;border-radius:12px;border:none;background:linear-gradient(90deg,#00aaff,#ff5aa3);color:#fff;font-weight:800;font-size:15px;cursor:pointer}
+    input{
+      width:100%;
+      padding:12px;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,0.08);
+      background:#0b1220;
+      color:#fff;
+      font-size:14px
+    }
+    .price{
+      font-size:20px;
+      font-weight:800;
+      color:#4dd0e1;
+      margin:8px 0 14px
+    }
+    button{
+      width:100%;
+      padding:14px;
+      border-radius:12px;
+      border:none;
+      background:linear-gradient(90deg,#00aaff,#ff5aa3);
+      color:#fff;
+      font-weight:800;
+      font-size:15px;
+      cursor:pointer
+    }
     button:disabled{opacity:.6;cursor:not-allowed}
+    img{
+      max-width:100%;
+      max-height:260px;
+      object-fit:cover;
+      border-radius:12px;
+      margin-bottom:12px;
+      display:none
+    }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h1>Secure Payment</h1>
-    <div class="small">Powered by Razorpay</div>
- 
-    <div class="row">
-      <label>Product</label>
-      <input id="product"  readonly />
-    </div>
-    <div class="row">
-      <label>Product Image</label>
-    <img
-      id="imgSrc"
-      style="
-        max-width:100%;
-        max-height:260px;
-        object-fit:cover;
-        border-radius:12px;
-        margin-bottom:12px;
-        display:none;
-      "
-    >
-    </div>
+<div class="card">
+  <h1>Secure Payment</h1>
+  <div class="small">Powered by Razorpay</div>
 
-    <div class="row">
-      <label>Amount</label>
-      <div class="price" id="priceText">₹0</div>
-    </div>
-
-    <div class="row">
-      <label>Your Name</label>
-      <input id="name" required />
-    </div>
-
-    <div class="row">
-      <label>Phone</label>
-      <input id="phone" required />
-    </div>
-
-    <button id="payBtn" disabled>Pay Now</button>
+  <div class="row">
+    <label>Product</label>
+    <input id="product" readonly />
   </div>
 
-  <!-- Razorpay checkout MUST be before inline script -->
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <div class="row">
+    <label>Product Image</label>
+    <img id="imgSrc">
+  </div>
 
-  <script>
-    // ---------- READ URL PARAMS ----------
-    const rawOrder = sessionStorage.getItem('pendingOrder');
+  <div class="row">
+    <label>Amount</label>
+    <div class="price" id="priceText">₹0</div>
+  </div>
 
-    if (!rawOrder) {
-      alert('Invalid access. Please place order again.');
+  <div class="row">
+    <label>Your Name</label>
+    <input id="name" required />
+  </div>
+
+  <div class="row">
+    <label>Phone</label>
+    <input id="phone" required />
+  </div>
+
+  <button id="payBtn" disabled>Pay Now</button>
+</div>
+
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+<script>
+  const rawOrder = sessionStorage.getItem('pendingOrder');
+  if (!rawOrder) {
+    alert('Invalid access. Please place order again.');
+    window.location.href = 'index.html';
+  }
+
+  let order;
+  try {
+    order = JSON.parse(rawOrder);
+  } catch {
+    alert('Invalid order data.');
+    window.location.href = 'index.html';
+  }
+
+  const productEl = document.getElementById('product');
+  const priceText = document.getElementById('priceText');
+  const nameEl = document.getElementById('name');
+  const phoneEl = document.getElementById('phone');
+  const productImg = document.getElementById('imgSrc');
+  const payBtn = document.getElementById('payBtn');
+
+  window.payBtn = payBtn;
+
+  const price = Number(order.price);
+  const product = order.product;
+
+  if (!price || price <= 0) {
+    alert('Invalid payment link.');
+  } else {
+    productEl.value = product;
+    priceText.innerText = '₹' + price;
+    nameEl.value = order.name || '';
+    phoneEl.value = order.phone || '';
+  }
+
+  if (order.image) {
+    productImg.src = order.image;
+    productImg.style.display = 'block';
+  }
+</script>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+  const app = initializeApp({
+    apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+    authDomain: "hamsasarees-24738.firebaseapp.com",
+    projectId: "hamsasarees-24738"
+  });
+
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+
+  window.db = db;
+  window.setDoc = setDoc;
+  window.doc = doc;
+  window.serverTimestamp = serverTimestamp;
+  window.currentUser = null;
+
+  onAuthStateChanged(auth, user => {
+    if (!user) {
+      alert('Please sign in first');
       window.location.href = 'index.html';
-    }
-
-    let order;
-    try {
-      order = JSON.parse(rawOrder);
-    } catch (e) {
-      alert('Invalid order data. Please place order again.');
-      window.location.href = 'index.html';
-    }
-
-    const price = Number(order.price);
-    const product = order.product;
-
-    const productEl = document.getElementById('product');
-    const priceText = document.getElementById('priceText');
-    const nameEl = document.getElementById('name');
-    const phoneEl = document.getElementById('phone');
-    const productImg = document.getElementById('imgSrc');
-
-if (order.image) {
-  productImg.src = order.image;
-  productImg.style.display = 'block';
-}
-
-    
-    const payBtn = document.getElementById('payBtn');
-
-    if (!price || isNaN(price) || price <= 0) {
-      alert('Invalid payment link. Please place order again.');
-      payBtn.disabled = true;
     } else {
-      priceText.innerText = '₹' + price;
-      productEl.value = product;
-      nameEl.value = order.name || '';
-      phoneEl.value = order.phone || '';
+      window.currentUser = user;
+      window.payBtn.disabled = false;
     }
-  </script>
+  });
+</script>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+<script>
+  payBtn.addEventListener('click', async () => {
+    if (!currentUser) return;
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
-      authDomain: "hamsasarees-24738.firebaseapp.com",
-      projectId: "hamsasarees-24738"
-    };
+    if (!nameEl.value.trim() || !/^[6-9]\d{9}$/.test(phoneEl.value)) {
+      alert('Enter valid name and Indian mobile number');
+      return;
+    }
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+    payBtn.disabled = true;
+    payBtn.textContent = 'Processing...';
 
-    window.currentUser = null;
+    const rzp = new Razorpay({
+      key: 'rzp_live_Rqulhc8rZRz8Iw',
+      amount: Math.round(price * 100),
+      currency: 'INR',
+      name: 'Hamsa Sarees',
+      description: product,
 
-    onAuthStateChanged(auth, user => {
-      if (!user) {
-        alert('Please sign in first');
-        window.location.href = 'index.html';
-      } else {
-        window.currentUser = user;
-        payBtn.disabled = false;
-      }
-    });
+      handler: async res => {
+        const orderId = crypto.randomUUID();
 
-    window.db = db;
-    window.setDoc = setDoc;
-    window.doc = doc;
-    window.serverTimestamp = serverTimestamp;
-  </script>
-
-  <script>
-    payBtn.addEventListener('click', async function () {
-      if (!window.Razorpay) {
-        alert('Razorpay SDK not loaded. Open via HTTPS / Live Server.');
-        return;
-      }
-
-      if (!currentUser) {
-        alert('Authentication in progress. Please wait.');
-        return;
-      }
-
-      payBtn.disabled = true;
-      payBtn.textContent = 'Processing...';
-
-      const amountPaise = Math.round(price * 100);
-
-      const options = {
-        key: 'rzp_live_Rqulhc8rZRz8Iw',
-        amount: amountPaise,
-        currency: 'INR',
-        name: 'Hamsa Sarees',
-        description: product || 'Order Payment',
-
-        handler: async function (response) {
-          const orderId = crypto.randomUUID();
-
-          try {
-            await setDoc(
-              doc(db, 'users', currentUser.uid, 'orders', orderId),
-              {
-                product: product,
-                price: price,
-                name: nameEl.value,
-                phone: phoneEl.value,
-                address: order.address,
-                paymentId: response.razorpay_payment_id,
-                status: 'PAID',
-                createdAt: serverTimestamp()
-              }
-            );
-
-            const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse';
-            const fd = new FormData();
-            fd.append('entry.1128392407', nameEl.value);
-            fd.append('entry.654904844', order.address);
-            fd.append('entry.1644126654', phoneEl.value);
-            fd.append('entry.1866699911', product);
-
-            fetch(formUrl, { method: 'POST', body: fd, mode: 'no-cors' });
-
-            sessionStorage.removeItem('pendingOrder');
-            alert('Payment successful!');
-            window.location.href = 'yourorders.html';
-          } catch (error) {
-            alert('Error saving order: ' + error.message);
-            payBtn.disabled = false;
-            payBtn.textContent = 'Pay Now';
+        await setDoc(
+          doc(db, 'users', currentUser.uid, 'orders', orderId),
+          {
+            product,
+            price,
+            name: nameEl.value,
+            phone: phoneEl.value,
+            email: currentUser.email,
+            address: order.address,
+            paymentId: res.razorpay_payment_id,
+            status: 'PAID',
+            createdAt: serverTimestamp()
           }
-        },
+        );
 
-        prefill: {
-          name: nameEl.value,
-          contact: phoneEl.value
-        },
+        const fd = new FormData();
+        fd.append('entry.1128392407', nameEl.value);
+        fd.append('entry.654904844', order.address);
+        fd.append('entry.1644126654', phoneEl.value);
+        fd.append('entry.1866699911', product);
+        fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
+          method: 'POST',
+          body: fd,
+          mode: 'no-cors'
+        });
 
-        theme: { color: '#00aaff' }
-      };
+        sessionStorage.removeItem('pendingOrder');
+        alert('Payment successful!');
+        window.location.href = 'yourorders.html';
+      },
 
-      const rzp = new Razorpay(options);
+      prefill: {
+        name: nameEl.value,
+        email: currentUser.email,
+        contact: phoneEl.value
+      },
 
-      rzp.on('payment.failed', function (resp) {
-        alert('Payment failed: ' + resp.error.description);
-        payBtn.disabled = false;
-        payBtn.textContent = 'Pay Now';
-      });
-
-      rzp.open();
+      theme: { color: '#00aaff' }
     });
-  </script>
+
+    rzp.on('payment.failed', () => {
+      alert('Payment failed');
+      payBtn.disabled = false;
+      payBtn.textContent = 'Pay Now';
+    });
+
+    rzp.open();
+  });
+</script>
+
 </body>
 </html>
