--- a/payment.html
+++ b/payment.html
@@ -13,7 +13,7 @@
     font-src https://fonts.gstatic.com data:;
     frame-src https://checkout.razorpay.com https://api.razorpay.com;
     connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://www.gstatic.com;
-    img-src 'self' data: https:;
+    img-src 'self' data: https: http:;
   " />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
