--- a/yourorders.html
+++ b/yourorders.html
@@ -137,7 +137,8 @@
     const toastEl = $('toast');
     const orderDetailModal = $('orderDetailModal');
     const orderDetailContent = $('orderDetailContent');
-
+    const productImg = document.getElementById('imgSrc');
+    
     function toast(msg){ if(!toastEl) return; toastEl.innerText = msg; toastEl.style.display = 'block'; setTimeout(()=>toastEl.style.display = 'none', 2200); }
 
     function openModal(modal){ if(!modal) return; modal.classList.add('show'); modal.removeAttribute('aria-hidden'); document.body.style.overflow = 'hidden'; }
