--- a/payment.html
+++ b/payment.html
@@ -215,6 +215,7 @@
           {
             product,
             price,
+            image: order.image || '',
             name: nameEl.value,
             phone: phoneEl.value,
             email: currentUser.email,
