--- a/yourorders.html
+++ b/yourorders.html
@@ -236,7 +236,7 @@ card.innerHTML = `
   </div>
 `;
 
-ordersContainer.appendChild(card);
+ordersContainer.appendChild(card);});
 
 
         ordersContainer.querySelectorAll('.deleteOrderBtn').forEach(b=>{
