--- a/yourorders.html
+++ b/yourorders.html
@@ -105,12 +105,12 @@ img{border-radius:8px}
   </div>
 </div>
 
-<div id="toast" class="toast">Saved</div>
+<div id="toast" class="toast"></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, query, orderBy, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
@@ -129,13 +129,6 @@ const loginBtn = document.getElementById('loginBtn');
 const logoutBtn = document.getElementById('logoutBtn');
 const modal = document.getElementById('orderModal');
 const orderDetails = document.getElementById('orderDetails');
-const toast = document.getElementById('toast');
-
-function showToast(msg){
-  toast.textContent = msg;
-  toast.style.display = 'block';
-  setTimeout(()=>toast.style.display='none',2000);
-}
 
 async function loadOrders(){
   if(!auth.currentUser) return;
@@ -168,9 +161,8 @@ async function loadOrders(){
           <div class="small">₹${o.price}</div>
         </div>
       </div>
-      <div style="display:flex;flex-direction:column;gap:6px">
+      <div>
         <button class="btn-ghost viewBtn" data-id="${d.id}">View</button>
-        <button class="btn deleteBtn" data-id="${d.id}">Delete</button>
       </div>
     `;
     ordersContainer.appendChild(card);
@@ -179,35 +171,28 @@ async function loadOrders(){
 
 ordersContainer.addEventListener('click', async e=>{
   const view = e.target.closest('.viewBtn');
-  const del  = e.target.closest('.deleteBtn');
-  if(!view && !del) return;
+  if(!view) return;
 
   const uid = auth.currentUser.uid;
-  const id = (view || del).dataset.id;
+  const id = view.dataset.id;
 
-  if(del){
-    if(!confirm('Delete order?')) return;
-    await deleteDoc(doc(db,'users',uid,'orders',id));
-    showToast('Order deleted');
-    loadOrders();
-  }
-
-  if(view){
-    const snap = await getDocs(collection(db,`users/${uid}/orders`));
-    snap.forEach(d=>{
-      if(d.id===id){
-        const o=d.data();
-        orderDetails.textContent =
+  const snap = await getDocs(collection(db,`users/${uid}/orders`));
+  snap.forEach(d=>{
+    if(d.id===id){
+      const o=d.data();
+      orderDetails.textContent =
 `Product: ${o.product}
 Price: ₹${o.price}
 Name: ${o.name}
 Phone: ${o.phone}
 Address:
-${o.address}`;
-        modal.classList.add('show');
-      }
-    });
-  }
+${o.address}
+Payment ID:
+${o.paymentId}
+Status: ${o.status || 'Processing'}`;
+      modal.classList.add('show');
+    }
+  });
 });
 
 document.getElementById('closeModal').onclick=()=>modal.classList.remove('show');
