--- a/payment.html
+++ b/payment.html
@@ -1,89 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hamsa Sarees — Payment</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hamsa Sarees — Payment</title>
 
-  <!-- CSP: Razorpay + Firebase + Google Forms -->
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self' https: data: blob:;
-    script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    font-src https://fonts.gstatic.com data:;
-    frame-src https://checkout.razorpay.com https://api.razorpay.com;
-    connect-src https://api.razorpay.com https://checkout.razorpay.com https://docs.google.com https://firestore.googleapis.com https://identitytoolkit.googleapis.com https://www.gstatic.com;
-    img-src 'self' data: https: http:;
-  " />
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self' https: data: blob:;
+  script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src https://fonts.gstatic.com data:;
+  frame-src https://checkout.razorpay.com https://api.razorpay.com;
+  connect-src https://api.razorpay.com https://checkout.razorpay.com
+               https://docs.google.com https://firestore.googleapis.com
+               https://identitytoolkit.googleapis.com https://www.gstatic.com;
+  img-src 'self' data: https: http:;
+" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-  <style>
-    body{
-      margin:0;
-      font-family:Inter,system-ui,Arial,sans-serif;
-      background:linear-gradient(180deg,#001f3f,#00306b);
-      color:#eaf6ff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      min-height:100vh
-    }
-    .card{
-      background:linear-gradient(180deg,#071522,#06121a);
-      border-radius:14px;
-      padding:24px;
-      max-width:420px;
-      width:100%;
-      box-shadow:0 20px 60px rgba(0,0,0,.45);
-      border:1px solid rgba(255,255,255,0.05)
-    }
-    h1{margin:0 0 6px;font-size:22px;font-weight:800}
-    .small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
-    .row{margin-bottom:12px}
-    label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
-    input{
-      width:100%;
-      padding:12px;
-      border-radius:10px;
-      border:1px solid rgba(255,255,255,0.08);
-      background:#0b1220;
-      color:#fff;
-      font-size:14px
-    }
-    .price{
-      font-size:20px;
-      font-weight:800;
-      color:#4dd0e1;
-      margin:8px 0 14px
-    }
-    button{
-      width:100%;
-      padding:14px;
-      border-radius:12px;
-      border:none;
-      background:linear-gradient(90deg,#00aaff,#ff5aa3);
-      color:#fff;
-      font-weight:800;
-      font-size:15px;
-      cursor:pointer
-    }
-    button:disabled{opacity:.6;cursor:not-allowed}
-    img{
-      max-width:100%;
-      max-height:260px;
-      object-fit:cover;
-      border-radius:12px;
-      margin-bottom:12px;
-      display:none
-    }
-  </style>
+<style>
+body{
+  margin:0;
+  font-family:Inter,system-ui,Arial,sans-serif;
+  background:linear-gradient(180deg,#001f3f,#00306b);
+  color:#eaf6ff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  min-height:100vh
+}
+.card{
+  background:linear-gradient(180deg,#071522,#06121a);
+  border-radius:14px;
+  padding:24px;
+  max-width:420px;
+  width:100%;
+  box-shadow:0 20px 60px rgba(0,0,0,.45);
+  border:1px solid rgba(255,255,255,0.05)
+}
+h1{margin:0 0 6px;font-size:22px;font-weight:800}
+.small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
+.row{margin-bottom:12px}
+label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
+input,textarea{
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid rgba(255,255,255,0.08);
+  background:#0b1220;
+  color:#fff;
+  font-size:14px;
+  resize:none
+}
+textarea{min-height:90px}
+.price{
+  font-size:20px;
+  font-weight:800;
+  color:#4dd0e1;
+  margin:8px 0 14px
+}
+button{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  background:linear-gradient(90deg,#00aaff,#ff5aa3);
+  color:#fff;
+  font-weight:800;
+  font-size:15px;
+  cursor:pointer
+}
+button:disabled{opacity:.6;cursor:not-allowed}
+img{
+  max-width:100%;
+  max-height:260px;
+  object-fit:cover;
+  border-radius:12px;
+  margin-bottom:12px;
+  display:none
+}
+</style>
 </head>
+
 <body>
 
 <div class="card">
-  <h1>Secure Payment</h1>
-  <div class="small">Powered by Razorpay</div>
+  <h1>Confirm & Pay</h1>
+  <div class="small">Please verify details before payment</div>
 
   <div class="row">
     <label>Product</label>
@@ -92,7 +96,7 @@
 
   <div class="row">
     <label>Product Image</label>
-    <img id="imgSrc">
+    <img id="productImg" alt="Product image">
   </div>
 
   <div class="row">
@@ -110,155 +114,137 @@
     <input id="phone" required />
   </div>
 
-  <button id="payBtn" disabled>Pay Now</button>
+  <div class="row">
+    <label>Delivery Address (Confirm Carefully)</label>
+    <textarea id="address" placeholder="House No, Street, Area, City, Pincode" required></textarea>
+  </div>
+
+  <button id="payBtn" disabled>Pay Securely</button>
 </div>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 <script>
-  const rawOrder = sessionStorage.getItem('pendingOrder');
-  if (!rawOrder) {
-    alert('Invalid access. Please place order again.');
-    window.location.href = 'index.html';
-  }
+const rawOrder = sessionStorage.getItem('pendingOrder');
+if(!rawOrder){
+  alert('Invalid access');
+  location.href='index.html';
+}
 
-  let order;
-  try {
-    order = JSON.parse(rawOrder);
-  } catch {
-    alert('Invalid order data.');
-    window.location.href = 'index.html';
-  }
+let order;
+try{ order = JSON.parse(rawOrder); }
+catch{ location.href='index.html'; }
 
-  const productEl = document.getElementById('product');
-  const priceText = document.getElementById('priceText');
-  const nameEl = document.getElementById('name');
-  const phoneEl = document.getElementById('phone');
-  const productImg = document.getElementById('imgSrc');
-  const payBtn = document.getElementById('payBtn');
+const productEl = document.getElementById('product');
+const priceText = document.getElementById('priceText');
+const nameEl = document.getElementById('name');
+const phoneEl = document.getElementById('phone');
+const addressEl = document.getElementById('address');
+const imgEl = document.getElementById('productImg');
+const payBtn = document.getElementById('payBtn');
 
-  window.payBtn = payBtn;
+const price = Number(order.price);
+if(!price || price<=0){
+  alert('Invalid price');
+  location.href='index.html';
+}
 
-  const price = Number(order.price);
-  const product = order.product;
+productEl.value = order.product || '';
+priceText.textContent = `₹${price}`;
+nameEl.value = order.name || '';
+phoneEl.value = order.phone || '';
+addressEl.value = order.address || '';
 
-  if (!price || price <= 0) {
-    alert('Invalid payment link.');
-  } else {
-    productEl.value = product;
-    priceText.innerText = '₹' + price;
-    nameEl.value = order.name || '';
-    phoneEl.value = order.phone || '';
-  }
-
-  if (order.image) {
-    productImg.src = order.image;
-    productImg.style.display = 'block';
-  }
+if(order.image){
+  imgEl.src = order.image;
+  imgEl.onload = ()=> imgEl.style.display='block';
+}
 </script>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-  import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  const app = initializeApp({
-    apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
-    authDomain: "hamsasarees-24738.firebaseapp.com",
-    projectId: "hamsasarees-24738"
-  });
+const app = initializeApp({
+  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+  authDomain: "hamsasarees-24738.firebaseapp.com",
+  projectId: "hamsasarees-24738"
+});
 
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-  window.db = db;
-  window.setDoc = setDoc;
-  window.doc = doc;
-  window.serverTimestamp = serverTimestamp;
-  window.currentUser = null;
+let currentUser = null;
 
-  onAuthStateChanged(auth, user => {
-    if (!user) {
-      alert('Please sign in first');
-      window.location.href = 'index.html';
-    } else {
-      window.currentUser = user;
-      window.payBtn.disabled = false;
-    }
-  });
-</script>
+onAuthStateChanged(auth,user=>{
+  if(!user){
+    alert('Please sign in first');
+    location.href='index.html';
+  }else{
+    currentUser = user;
+    payBtn.disabled = false;
+  }
+});
 
-<script>
-  payBtn.addEventListener('click', async () => {
-    if (!currentUser) return;
+payBtn.addEventListener('click', ()=>{
+  if(!currentUser) return;
 
-    if (!nameEl.value.trim() || !/^[6-9]\d{9}$/.test(phoneEl.value)) {
-      alert('Enter valid name and Indian mobile number');
-      return;
-    }
+  const name = nameEl.value.trim();
+  const phone = phoneEl.value.replace(/\s+/g,'');
+  const address = addressEl.value.trim();
 
-    payBtn.disabled = true;
-    payBtn.textContent = 'Processing...';
+  if(!name || !/^[6-9]\d{9}$/.test(phone) || address.length < 10){
+    alert('Please enter valid name, phone and full address');
+    return;
+  }
 
-    const rzp = new Razorpay({
-      key: 'rzp_live_Rqulhc8rZRz8Iw',
-      amount: Math.round(price * 100),
-      currency: 'INR',
-      name: 'Hamsa Sarees',
-      description: product,
+  payBtn.disabled=true;
+  payBtn.textContent='Processing...';
 
-      handler: async res => {
-        const orderId = crypto.randomUUID();
+  const rzp = new Razorpay({
+    key:'rzp_live_Rqulhc8rZRz8Iw',
+    amount:Math.round(price*100),
+    currency:'INR',
+    name:'Hamsa Sarees',
+    description:order.product,
 
+    handler: async res=>{
+      try{
         await setDoc(
-          doc(db, 'users', currentUser.uid, 'orders', orderId),
+          doc(db,'users',currentUser.uid,'orders',crypto.randomUUID()),
           {
-            product,
+            product:order.product,
             price,
-            image: order.image || '',
-            name: nameEl.value,
-            phone: phoneEl.value,
-            email: currentUser.email,
-            address: order.address,
-            paymentId: res.razorpay_payment_id,
-            status: 'PAID',
-            createdAt: serverTimestamp()
+            image:order.image||'',
+            name,
+            phone,
+            address,
+            email:currentUser.email,
+            paymentId:res.razorpay_payment_id,
+            status:'PAID',
+            createdAt:serverTimestamp()
           }
         );
+      }catch(e){
+        alert('Payment received but order save failed. Contact support.');
+        return;
+      }
 
-        const fd = new FormData();
-        fd.append('entry.1128392407', nameEl.value);
-        fd.append('entry.654904844', order.address);
-        fd.append('entry.1644126654', phoneEl.value);
-        fd.append('entry.1866699911', product);
-        fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
-          method: 'POST',
-          body: fd,
-          mode: 'no-cors'
-        });
-
-        sessionStorage.removeItem('pendingOrder');
-        alert('Payment successful!');
-        window.location.href = 'yourorders.html';
-      },
-
-      prefill: {
-        name: nameEl.value,
-        email: currentUser.email,
-        contact: phoneEl.value
-      },
-
-      theme: { color: '#00aaff' }
-    });
-
-    rzp.on('payment.failed', () => {
-      alert('Payment failed');
-      payBtn.disabled = false;
-      payBtn.textContent = 'Pay Now';
-    });
-
-    rzp.open();
+      sessionStorage.removeItem('pendingOrder');
+      alert('Payment successful!');
+      location.href='yourorders.html';
+    }
   });
+
+  rzp.on('payment.failed',()=>{
+    alert('Payment failed');
+    payBtn.disabled=false;
+    payBtn.textContent='Pay Securely';
+  });
+
+  rzp.open();
+});
 </script>
 
 </body>
